Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -289,8 +289,7 @@ header, h1, h2, h3, h4, h5, h6 {
   padding: var(--margin-collapse-bugfix) var(--font-size);
 }
 body > header {}
-nav > header {
-}
+nav > header {}
 nav > header::before,
 nav > header::after {
   padding: 0.2ch;
